# Dice

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.dm
.github/workflows/: build.yml
benches/: dice-bench.rs
data/locales/en-US/: error-notes.ftl  errors.ftl
data/scripts/: prelude.dm  test.dm
dice/: Cargo.toml
dice-bytecode/: Cargo.toml
dice-bytecode/src/: cursor.rs  instruction.rs  lib.rs  span.rs
dice-cli/: Cargo.toml
dice-cli/src/: main.rs
dice-compiler/: Cargo.toml
dice-compiler/src/: assembler.rs  compile_fn.rs  compiler.rs  compiler_error.rs  compiler_stack.rs  decl_scan.rs  error.rs  lib.rs  scope_stack.rs  upvalue.rs
dice-compiler/src/visitor/: decl_class.rs  decl_export.rs  decl_fn.rs  decl_import.rs  decl_op.rs  decl_var.rs  expr_assignment.rs  expr_binary_op.rs  expr_block.rs  expr_break.rs  expr_continue.rs  expr_error_propagate.rs  expr_field_access.rs  expr_fn_call.rs  expr_for.rs  expr_if.rs  expr_index.rs  expr_is.rs  expr_loop.rs  expr_null_propagate.rs  expr_prefix_op.rs  expr_range_loop.rs  expr_return.rs  expr_safe_field_access.rs  expr_super_access.rs  expr_super_call.rs  expr_unary_op.rs  expr_while.rs  literal_anonymous_fn.rs  literal_bool.rs  literal_dice_roll.rs  literal_float.rs  literal_int.rs  literal_list.rs  literal_none.rs  literal_null.rs  literal_object.rs  literal_string.rs  literal_unit.rs  literal_variable.rs  (+2 more)
dice-core/: Cargo.toml
dice-core/resources/locales/en-US/: errors.ftl
dice-core/src/: constants.rs  gc_any.rs  hash.rs  lib.rs  operator.rs  protocol.rs  runtime.rs  source.rs  span.rs  spanned_error.rs  type_id.rs  upvalue.rs
dice-core/src/bytecode/: cursor.rs  instruction.rs  mod.rs
dice-core/src/error/: codes.rs  context.rs  fmt.rs  localization.rs  mod.rs  tag.rs  trace.rs
dice-core/src/id/: type_id.rs
dice-core/src/runtime/: class.rs  mod.rs  module.rs
dice-core/src/type_pattern/: mod.rs
dice-core/src/value/: array.rs  class.rs  fn_bound.rs  fn_closure.rs  fn_native.rs  fn_script.rs  list.rs  method_pattern.rs  mod.rs  object.rs  string.rs  symbol.rs
dice-error/: Cargo.toml
dice-error/src/: compiler_error.rs  lib.rs  runtime_error.rs  span.rs  syntax_error.rs  type_error.rs
dice-runtime/: Cargo.toml
dice-runtime/src/: error.rs  lib.rs  macros.rs  module_loader.rs  runtime.rs  stack.rs  type_id.rs  upvalue.rs  value.rs
dice-runtime/src/classes/: any.rs  array.rs  bool.rs  class.rs  float.rs  function.rs  int.rs  mod.rs  module.rs  object.rs  string.rs  unit.rs
dice-runtime/src/interpreter/: helper.rs  mod.rs
dice-runtime/src/module/: file_loader.rs  mod.rs
dice-runtime/src/runtime/: call_frame.rs  helper.rs  interpreter.rs  mod.rs  stack.rs
dice-runtime/src/runtime/interpreter/: mod.rs
dice-runtime/src/stack/: call_frame.rs  frame.rs  mod.rs  stack.rs
dice-runtime/src/value/: array.rs  class.rs  fn_bound.rs  fn_native.rs  object.rs  string.rs  symbol.rs
dice-syntax/: Cargo.toml
dice-syntax/src/: error.rs  lib.rs  parser.rs  span.rs  syntax_error.rs
dice-syntax/src/ast/: mod.rs  node.rs
dice-syntax/src/lexer/: dice_token.rs  lexer_result.rs  mod.rs  token.rs
dice-syntax/src/parser/: mod.rs  rules.rs
dice-syntax/src/tree/: mod.rs  node.rs
dice-syntax2/: Cargo.toml
dice-syntax2/src/: lexer.rs  lib.rs  syntax.rs
dice-syntax2/src/parser/: mod.rs  parse_bin_op.rs  parse_expr.rs  parse_literal.rs  rules.rs
dice/benches/: dice-bench.rs
dice/src/: lib.rs
dice/tests/: scripts.rs
fuzz/: Cargo.toml  fuzz.sh
fuzz/fuzz_targets/: dice.rs
fuzz/in/: class  fn_call  if_expr  loop
src/: lib.rs  main.rs
src/compiler/: assembler.rs  compiler_stack.rs  decl_scan.rs  error.rs  scope_stack.rs
src/compiler/visitor/: decl_fn.rs  decl_var.rs  expr_assignment.rs  expr_binary_op.rs  expr_block.rs  literal_anonymous_fn.rs  literal_string.rs  literal_variable.rs
src/runtime/: error.rs
src/runtime/core/: mod.rs  value.rs
src/runtime/interpreter/: bytecode.rs  instruction.rs  mod.rs  stack.rs
src/runtime/lib/: fn_native.rs
src/syntax/: error.rs
src/syntax/lexer/: token.rs
src/syntax/parser/: mod.rs
src/syntax/tree/: mod.rs  node.rs
tests/: scripts.rs
