[workspace]
members = [
    "dice",
    "dice-cli",
    "dice-compiler",
    "dice-core",
    "dice-runtime",
    "dice-syntax"
]

default-members = [
    "dice",
    "dice-cli"
]

[profile.release]
codegen-units = 1
debug = true

[prfile.release.package."*"]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1

[prfile.bench.package."*"]
lto = "fat"
codegen-units = 1