[workspace]
members = [
    "dice",
    "dice-cli",
    "dice-compiler",
    "dice-core",
    "dice-error",
    "dice-runtime",
    "dice-syntax"
]

default-members = [
    "dice",
    "dice-cli"
]

[profile.release]
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.bench.package."*"]
codegen-units = 1