[package]
name = "dice-bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
num-derive = "0.4"
num-traits = "0.2"
ahash = "0.8.10"
