[package]
authors = ["Josh Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "dice-compiler"
version = "0.1.0"

[dependencies]
bytes = "1.0"
dice-core = { path = "../dice-core" }
dice-syntax = { path = "../dice-syntax" }
dice-bytecode = { path = "../dice-bytecode" }
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
