[package]
authors = ["Josh Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "dice-core"
version = "0.1.0"

[dependencies]
bytes = "1.0"
colored = "2"
fluent-templates = "0.8"
num-derive = "0.3"
num-traits = "0.2"
string-interner = "0.14"
thiserror = "1.0"
uuid = { version = "1.1", features = ["v4"] }
ahash = "0.8.3"
