[package]
authors = ["Josh Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "dice-core"
version = "0.1.0"

[dependencies]
dice-bytecode = { path = "../dice-bytecode" }
bytes = "1.0"
colored = "2"
fluent-templates = "0.8"
num-derive = "0.4"
num-traits = "0.2"
string-interner = "0.15"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
ahash = "0.8.3"
gc-arena = "0.5.0"
gc-arena-derive = "0.5.0"
