[package]
authors = ["Josh Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "dice-core"
version = "0.1.0"

[dependencies]
dice-bytecode = { path = "../dice-bytecode" }
bytes = "1.0"
colored = "2"
fluent-templates = "0.8"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
ahash = "0.8.3"
